@@ -103,6 +103,7 @@ AG_GST_SET_PLUGINDIR
 
 dnl Check for the libraries
 AG_GST_PKG_CHECK_MODULES(LIBXML, libxml-2.0 >= 2.4.9)
+AG_GST_PKG_CHECK_MODULES(PANGO, pango >= 1.16.0  pangocairo >= 1.16.0)
 
 AC_OUTPUT(
 Makefile
